--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <p>
                             Happy Monthsary mahal ko <3 
                         </p>
-                        <a href="message.html"><button class="love-button"><span>OPEN</span></button>
+                        <a href="message"><button class="love-button"><span>OPEN</span></button>
 </a>
                     </div>
                 </div>
