--- a/message.html
+++ b/message.html
@@ -71,7 +71,7 @@
   <small>hindi ko na nasama yung iba hihi</small>
 </div>
 <div class="video-container">
-  <iframe src="https://drive.google.com/file/d/1TtNe6XXP1ZzS145C8D0MtPPPUHP-cvl8/preview" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1TtNe6XXP1ZzS145C8D0MtPPPUHP-cvl8/preview" width="640" height="480" allow="autoplay"></iframe>
 </div>
 <script type="text/javascript">
   window.addEventListener('DOMContentLoaded', (event) => {
