--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="envelope-wrapper">
+        <div id="envelope-wrapper" class="envelope-wrapper">
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
@@ -17,8 +17,7 @@
                         <p>
                             Happy Monthsary mahal ko <3 
                         </p>
-                        <a href="message"><button class="love-button"><span>OPEN</span></button>
-</a>
+                        <a href="message"><button class="love-button"><span>OPEN</span></button></a>
                     </div>
                 </div>
             </div>
@@ -26,12 +25,35 @@
         </div>
     </div>
     <script>
-        const element = document.getElementById('envelope-wrapper');
-            
-        const envelope = document.querySelector('.envelope-wrapper');
+        function showAlert() {
+            const currentDate = new Date();
+            const targetDate = new Date(currentDate.getFullYear(), 3, 13, 0, 0, 0); // April 13 12:00 am
+            const timeLeft = targetDate - currentDate;
+
+            if (timeLeft > 0) {
+                const days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
+                const hours = Math.floor((timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                const minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
+                const seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
+
+                const message = `\n${days} days ${hours} hours ${minutes} minutes ${seconds} seconds`;
+
+                // Update the alert message directly
+                alert(message);
+            } else {
+                clearInterval(interval);
+            }
+        }
+
+        // Initial call to display the alert immediately
+        showAlert();
+
+        // Set interval to update the alert message in real-time
+        const interval = setInterval(showAlert, 1000);
+
+        const envelope = document.getElementById('envelope-wrapper');
         envelope.addEventListener('click', () => {
             envelope.classList.toggle('flap');
-            element.style.display = 'none';
         });
     </script>
 </body>
