--- a/message.html
+++ b/message.html
@@ -7,6 +7,10 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<audio autoplay>
+  <source src="song.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 <div class="love-letter">
   <h1>Hi loveeee,</h1>
   <p>
