--- a/message.html
+++ b/message.html
@@ -18,7 +18,10 @@
   </p>
 </div>
 
-<img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExb255OG1vZ3F6MjhlMnhieGhuMGlreDJqNjFpN3cwZGo5MHAybG92NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/e1Rsb25X53NmhkYmBl/giphy.gif" width="200" height="200" frameBorder="0">
+
+<div class="div">
+  <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExb255OG1vZ3F6MjhlMnhieGhuMGlreDJqNjFpN3cwZGo5MHAybG92NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/e1Rsb25X53NmhkYmBl/giphy.gif" width="200" height="200" frameBorder="0">
+</div>
 
 <div class="gallery">
   <h2>Pictures</h2>
@@ -114,6 +117,21 @@ body {
 }
 
 .love-letter p {
+  font-size: 16px;
+  line-height: 1.4;
+  color: #555;
+}
+
+.div {
+  text-align: center;
+  padding: 20px;
+  margin: 20px;
+  background-color: #fff;
+  border-radius: 20px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); /* Soft shadow */
+}
+
+.div p {
   font-size: 16px;
   line-height: 1.4;
   color: #555;
