--- a/message.html
+++ b/message.html
@@ -23,6 +23,11 @@
   <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExb255OG1vZ3F6MjhlMnhieGhuMGlreDJqNjFpN3cwZGo5MHAybG92NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/e1Rsb25X53NmhkYmBl/giphy.gif" width="200" height="200" frameBorder="0">
 </div>
 
+<div class="div">
+  <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHlyMXM4MHFhODU2aHJtdXFpMGo3NnVneGk1Z2hpNTJqM2plM2p3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/otxwaMQBfNh4ZNnvSm/giphy.gif" width="250" height="200" frameBorder="0">
+  <p>Flowers mahal oh</p>
+</div>
+
 <div class="gallery">
   <h2>Pictures</h2>
   <div class="images" id="imageContainer">
@@ -79,6 +84,7 @@
   </div>
   <small>hindi ko na nasama yung iba hihi</small>
 </div>
+
 <script type="text/javascript">
   window.addEventListener('DOMContentLoaded', (event) => {
   const imageContainer = document.getElementById('imageContainer');
@@ -135,6 +141,12 @@ body {
   font-size: 16px;
   line-height: 1.4;
   color: #555;
+}
+
+.div h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #e05263; /* Dark pink color for header */
 }
 
 .gallery {
@@ -198,6 +210,43 @@ body {
     width: 200px;
     height: 200px;
   }
+}
+
+.choice-btn {
+  margin: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+}
+
+.choice-btn:hover {
+  background-color: #0056b3;
+}
+
+#otherOption {
+  margin: 10px 0;
+  padding: 8px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+#submitBtn {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+}
+
+#submitBtn:hover {
+  background-color: #218838;
 }
 
 </style>
